[package]
name = "skia-plotters-backend"
description = "skia-safe backend for plotters"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "./README.md"
repository = "https://github.com/marc2332/skia-plotters-backend"
keywords = ["gui", "plot", "backend", "skia", "plotters"]
categories = ["gui"]

[dependencies]
skia-safe = { version = "0.90.0", features = ["textlayout"] }
plotters-backend = "0.3.7"

[dev-dependencies]
plotters = "0.3.7"
